# airflow-provider-ducklake

./: .gitignore  README.md  pyproject.toml
airflow_provider_ducklake.egg-info/: entry_points.txt
ducklake_provider/: __init__.py
ducklake_provider/hooks/: ducklake_hook.py
